kube/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-database
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql
          name: mysql
          ports:
            - containerPort: 3306
---
apiVersion: v1
metadata:
  name: mysql-service
kind: Service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
