kube/mytask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytask
  labels:
    app: mytask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mytask
  template:
    metadata:
      labels:
        app: mytask
    spec:
      containers:
        - image: khoa141/mytask
          name: mytask
          ports:
            - containerPort: 3000
---
apiVersion: v1
metadata:
  name: mytask-service
kind: Service
spec:
  selector:
    app: mytask
  ports:
    - port: 80
      targetPort: 3000
