kube/mytask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytask-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mytask-service
                port:
                  number: 80
